<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/beach"
    tools:context="ram.android.myhabittracker.MainActivity"
    android:weightSum="1">
    <TextView
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view1"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="#4689C8"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/title"
        android:inputType="textMultiLine" />
    <TextView
        android:id="@+id/view2"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:text="@string/view2"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="#4689C8"
        android:textStyle="bold"
        android:layout_weight="0.04" />

    <EditText
        android:id="@+id/duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        android:inputType="textMultiLine" />

    <Button
        android:text="@string/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button" />
    <EditText
        android:layout_width="match_parent"
        android:ems="10"
        android:id="@+id/edittext3"
        android:hint="@string/view3"
        android:inputType="textPersonName"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_green_dark" />


    <TextView
        android:id="@+id/textview1"
        android:layout_width="353dp"
        android:layout_height="20dp"
        android:text="@string/abcd"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@android:color/holo_green_dark"
        android:textStyle="bold"
        android:layout_weight="0.05" />
    <Button
        android:id="@+id/button2"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_green_dark"
        android:text="@string/m5"
        android:layout_weight="0.00" />


</LinearLayout>
